--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <url>http://maven.apache.org</url>
   <packaging>jar</packaging>
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <sonar.organization>francescomarelli</sonar.organization>
